[Extensions UI Views] Adjust the wrench menu actions for items added/removed

Extension items can be added or removed to the wrench menu while it is open
(if, for instance, a popup closes and slides the item back in, or, more rarely,
the extension is only just added, crashes, etc). In rare cases, this can result
in the container needing to add or remove a row, which means the rest of the
menu's height needs to adjust.

BUG=591028

Review URL: https://codereview.chromium.org/1757993003

Cr-Commit-Position: refs/heads/master@{#379035}

Former-commit-id: f3f1fd9a78e963f3068d7eb46a66e4ff40348f4b