chrome/browser/ui/views/toolbar/extension_toolbar_menu_view.h
@@ -16,6 +16,10 @@ class Browser;
 class BrowserActionsContainer;
 class ToolbarActionsBar;
 
+namespace views {
+class MenuItemView;
+}
+
 // ExtensionToolbarMenuView is the view containing the extension actions that
 // overflowed from the BrowserActionsContainer, and is contained in and owned by
 // the app menu.
@@ -24,7 +28,9 @@ class ToolbarActionsBar;
 class ExtensionToolbarMenuView : public views::ScrollView,
                                  public ToolbarActionsBarObserver {
  public:
-  ExtensionToolbarMenuView(Browser* browser, AppMenu* app_menu);
+  ExtensionToolbarMenuView(Browser* browser,
+                           AppMenu* app_menu,
+                           views::MenuItemView* menu_item);
   ~ExtensionToolbarMenuView() override;
 
   // Returns whether the app menu should show this view. This is true when
@@ -65,6 +71,9 @@ class ExtensionToolbarMenuView : public views::ScrollView,
 
   // The app menu, which may need to be closed after a drag-and-drop.
   AppMenu* app_menu_;
+
+  // The MenuItemView this view is contained within.
+  views::MenuItemView* menu_item_;
 
   // The overflow BrowserActionsContainer which is nested in this view.
   BrowserActionsContainer* container_;
